--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
   "dependencies": {
     "@angular-devkit/core": "^18.2.11",
     "@angular-devkit/schematics": "^18.2.11",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "typescript": "~5.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
     "jasmine": "^5.0.0",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "typescript-eslint": "^8.14.0"
   }
 }
