--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier . --write",
-    "format": "npm run prettier:fix && npm run lint:fix"
+    "format": "npm run prettier:fix && npm run lint:fix",
+    "prepare": "husky"
   },
   "keywords": [
     "schematics",
@@ -27,11 +28,14 @@
     "typescript": "~5.5.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.14.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "husky": "^9.1.6",
     "jasmine": "^5.0.0",
     "prettier": "3.3.3",
     "typescript-eslint": "^8.14.0"
