feat: configure dist folder for project builder

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@angular-devkit/core": "^18.2.11",
     "@angular-devkit/schematics": "^18.2.11",
+    "@angular/cdk": "^18.2.12",
+    "@schematics/angular": "^18.2.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "typescript": "~5.5.2"
