--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular-devkit/core": "^18.2.11",
     "@angular-devkit/schematics": "^18.2.11",
     "@angular/cdk": "^18.2.12",
+    "@inquirer/confirm": "^5.0.2",
+    "@inquirer/select": "^4.0.2",
     "@schematics/angular": "^18.2.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
